syntax = "proto3";

option go_package = "github.com/JuanGQCadavid/ds-practice-2025/order_service/pb";

service Consensus {
    rpc CoupDeAaaah (Empty) returns (CoupDEtatResponse); // Golpe de estado. Coup d'Ã©tat
    rpc YeahImStillAliveBitch (Empty) returns (Empty); // Heartbit
}

message Empty{}

message CoupDEtatResponse {
    bool oks = 1;
}
